[gd_scene load_steps=3 format=3 uid="uid://bx56talbyqqs"]

[ext_resource type="Script" path="res://Scenes_Scripts/Weapons/startingweapon/starting_weapon.gd" id="1_3nbot"]

[sub_resource type="CircleShape2D" id="CircleShape2D_id7x0"]
radius = 220.009

[node name="StartingWeapon" type="Node2D"]
script = ExtResource("1_3nbot")

[node name="RangeHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="RangeHitboxShape" type="CollisionShape2D" parent="RangeHitbox"]
shape = SubResource("CircleShape2D_id7x0")

[node name="Firerate" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="RangeHitbox" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="RangeHitbox" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Firerate" to="." method="_on_firerate_timeout"]
